--- a/src/app/pages/advice/advice.page.html
+++ b/src/app/pages/advice/advice.page.html
@@ -34,5 +34,7 @@
 </ion-content>
 
 <ion-footer class="ion-padding ion-margin-bottom">
-  <ion-button expand="full" color="dark"> 次へ </ion-button>
+  <ion-nav-link router-direction="forward" [component]="agreePage">
+    <ion-button expand="full" color="dark">次へ</ion-button>
+  </ion-nav-link>
 </ion-footer>
