--- a/src/app/pages/agree/agree.page.html
+++ b/src/app/pages/agree/agree.page.html
@@ -1,13 +1,56 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>agree</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-text><h2>Advice Page</h2></ion-text>
+  <ion-text>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus
+      facilis cum iusto ratione aspernatur blanditiis, labore odit fuga quas,
+      non enim reprehenderit qui illum ea obcaecati repellendus eum maxime sed!
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error nulla
+      reprehenderit ut quia corporis expedita a consequuntur neque illo
+      officiis, iure perspiciatis. Atque facilis error delectus voluptate
+      deleniti provident natus.
+    </p>
+  </ion-text>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">agree</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-text>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus
+      facilis cum iusto ratione aspernatur blanditiis, labore odit fuga quas,
+      non enim reprehenderit qui illum ea obcaecati repellendus eum maxime sed!
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error nulla
+      reprehenderit ut quia corporis expedita a consequuntur neque illo
+      officiis, iure perspiciatis. Atque facilis error delectus voluptate
+      deleniti provident natus.
+    </p>
+  </ion-text>
+  <ul>
+    <li>ユーザー情報の入力</li>
+    <li>メールアドレスの確認</li>
+    <li>パスワードの設定</li>
+    <li>登録完了</li>
+  </ul>
+
+  <ion-list>
+    <ion-item>
+      <ion-checkbox
+        alignment="start"
+        label-placement="end"
+        name="agree"
+        [(ngModel)]="agreeChecked"
+        required
+        helper-text="lorem adsa asd adsa asd"
+        >Aligned to the Start</ion-checkbox
+      >
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer class="ion-padding ion-margin-bottom">
+  <ion-toolbar>
+    <ion-nav-link router-direction="forward">
+      <ion-button expand="full" color="dark" [disabled]="!agreeChecked"
+        >申込む</ion-button
+      >
+    </ion-nav-link>
+  </ion-toolbar>
+</ion-footer>
